--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>MG WordKart</title>
+    <title>MG Kelimeler</title>
     <style>
         :root{
             --bg:#0f172a;           /* slate-900 */
@@ -292,7 +292,7 @@
                 <div class="brand">
                     <div class="logo">MG</div>
                     <div>
-                        <h1>MG WordKart</h1>
+                        <h1>MG Kelimeler</h1>
                         <div class="muted">İngilizce ⇄ Türkçe kartlarla öğren</div>
                     </div>
                 </div>
@@ -447,7 +447,7 @@
             <!-- ABOUT VIEW -->
             <section id="about" class="view">
                 <div class="about-content">
-                    <h2 style="margin-top: 0;">MG WordKart Hakkında</h2>
+                    <h2 style="margin-top: 0;">MG Kelimeler Hakkında</h2>
                     <p>Bu uygulama, İngilizce kelime bilginizi flaş kartlar aracılığıyla geliştirmek için tasarlanmıştır. Belirlenen kelime sayısını çalışabilir ve daha önce çalıştığınız kelimeleri tekrar gözden geçirebilirsiniz.</p>
                     <p>Uygulama, yerleşik bir kelime havuzu kullanır ve tarayıcınızın sesli okuma özelliğini kullanarak kelimelerin telaffuzunu dinlemenize olanak tanır.</p>
                 </div>
